--- a/report/references.bib
+++ b/report/references.bib
@@ -1,26 +1,8 @@
-@article{example2023,
-    author = {Author, A. and Writer, B.},
-    title = {Example Paper Title},
-    journal = {Journal of Examples},
-    volume = {1},
-    number = {1},
-    pages = {1--10},
-    year = {2023},
-    doi = {10.1234/example.2023.1}
+@software{UK_AI_Security_Institute_Inspect_AI_Framework_2024,
+  author = {AI Security Institute, UK},
+  title = {Inspect {AI:} {Framework} for {Large} {Language} {Model}
+    {Evaluations}},
+  date = {2024-05},
+  url = {https://github.com/UKGovernmentBEIS/inspect_ai},
+  langid = {en}
 }
-
-@book{book2023,
-    author = {Author, C.},
-    title = {Example Book Title},
-    publisher = {Example Publisher},
-    year = {2023},
-    address = {City, Country}
-}
-
-@inproceedings{conference2023,
-    author = {Presenter, D. and Coauthor, E.},
-    title = {Example Conference Paper},
-    booktitle = {Proceedings of the Example Conference},
-    year = {2023},
-    pages = {100--110}
-} 
