test runs updated

--- a/report/sections/discussion.tex
+++ b/report/sections/discussion.tex
@@ -1,9 +1,8 @@
 \section{Discussion}
 \label{sec:discussion}
-Interpret your results and discuss their implications. This section should:
-\begin{itemize}
-    \item Interpret the results
-    \item Compare with previous studies
-    \item Discuss limitations
-    \item Suggest future work
-\end{itemize} 
+
+HUMAN EVALUATION doesn not necessarily mimic the PaperQA methodology (they have access to the internet, not a fixed amount of papers). However, with a big enough corpus of papers, this search can eventually be viewed as the same. 
+
+Also they were financially motivated, which does encourage maximum human performance, but also potential. 
+
+We used the test set. Smaller, therefore more uncertainty in the result. Test set papers are all valid. Did not use full dataset due to cost and time budget. 
