report updated with new runs

--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,30 +1,4 @@
 \section{Results}
 \label{sec:results}
-Present your findings in a clear and organized manner.
 
-\subsection{Statistical Analysis}
-Include relevant statistical results.
-
-\subsection{Figures and Tables}
-Example of a table:
-\begin{table}[H]
-    \centering
-    \caption{Sample Table}
-    \label{tab:sample}
-    \begin{tabular}{lcc}
-        \toprule
-        Category & Value 1 & Value 2 \\
-        \midrule
-        A & 1.23 & 4.56 \\
-        B & 7.89 & 0.12 \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-
-Example of a figure reference:
-\begin{figure}[H]
-    \centering
-    % \includegraphics[width=0.8\textwidth]{figures/sample.png}
-    \caption{Sample Figure}
-    \label{fig:sample}
-\end{figure} 
+AG2 also uses LLMs, and changes the output of PaperQA/agent. Therefore, this adds uncertainty into the method. Checked every sample and the expected output has been outputted, so this is mitigated in this report, but should be aware for future usage. 
