--- a/report/main.tex
+++ b/report/main.tex
@@ -1,4 +1,4 @@
-x\documentclass[12pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 
 % Essential packages
 \usepackage[utf8]{inputenc}
@@ -27,12 +27,12 @@ x\documentclass[12pt,a4paper]{article}
 
 \maketitle
 
-\input{sections/abstract}
-\input{sections/introduction}
-\input{sections/methods}
-\input{sections/results}
-\input{sections/discussion}
-\input{sections/conclusion}
+\input{abstract}
+\input{introduction}
+\input{methods}
+\input{results}
+\input{discussion}
+\input{conclusion}
 
 \section*{Acknowledgments}
 Acknowledge any funding, technical support, or other contributions.
