--- a/demo/liqa2_new_benchmark.ipynb
+++ b/demo/liqa2_new_benchmark.ipynb
@@ -1043,7 +1043,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_paperQA2",
+   "display_name": "paperqa2_venv",
    "language": "python",
    "name": "python3"
   },
